# ayed_taller_arboles

./: CMakeLists.txt  README.md  main.cpp
include/: Alumno.hpp  ArbolAlumnos.hpp  Nodo.hpp
src/: Alumno.cpp  ArbolAlumnos.cpp
